2013-12-26  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m
	* Source/xlib/XGFontManager.m
	* Source/xlib/XGBitmap.m: Remove some compiler warnings.

2013-12-24  Richard Frith-Macdonald <rfm@gnu.org>

        * Version: bump to 0.24.0

2013-12-23  Fred Kiefer <FredKiefer@gmx.de>

        * Update release notes to prepare for upcoming release.

2013-12-23  Fred Kiefer <FredKiefer@gmx.de>

	* Source/cairo/CairoFaceInfo.m (-fontFace): Warn about the usage
	of non-scalable fonts.

2013-12-18  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_createBuffer, -windowbacking::,
	-setWindowdevice:forContext:): Move code from last patch around a bit.

2013-12-18  Eric Wasylishen  <ewasylishen@gmail.com>

	* Source/x11/XGServerWindow.m (-_createBuffer): Fix a big
	memory leak noticed by Riccardo with the cairo backend,
	by #ifdef-ing out this method when using cairo.

2013-12-13  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGDragView.m (-_xWindowAcceptingDnDDescendentOf:...):
	Correct to work with kwin window decoration.

2013-12-13  Fred Kiefer <FredKiefer@gmx.de>

	* Tools/xpbs.m (-xProvideSelection:): Leave enough space for all
	possible types.
	* Source/x11/XGDragView.m: Simplify D&D window detection code.

2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalSurface.h
	* Source/opal/OpalSurface.m: Make the -device method public.
	* Headers/opal/OpalContext.h: Remove method definitions.
	* Source/opal/OpalContext.m: Limit the accepted image types.

2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalSurface.h
	* Source/opal/OpalSurface.m: Remove compiler warnings.
	* Source/opal/OpalContext.m: Move -flushGraphics method to here.
	* Source/opal/OpalGState.m: Simplify -DPSimage. Evaluate CGCTX
	only once per method.

2013-09-29  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/opal/OpalGState.h: Clean up to reduce warnings.
	* Source/opal/OpalGState.m: Add missing path and matrix methods.