@@ -1,3 +1,8 @@
+2013-12-29  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/cairo/CairoGState.m (-GSSetFont:),
+	* Source/cairo/CairoFaceInfo.m (-drawGlyphs:...): Use scaled font directly.
+
 2013-12-26  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/xlib/GSXftFontInfo.m
